# mplayer-video-thumbnailer

./: ChangeLog  Makefile.am  Makefile.in  ProjectHome.md  aclocal.m4  config.h  config.h.in  configure  configure.in  nailer.schemas  nailer.schemas.in  nailer.spec  nailer.spec.in  nailer.thumbnailer  video-thumbnailer.desktop  video-thumbnailer.desktop.in
src/: Makefile.am  Makefile.in  left.h  main.c  right.h
