dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(nailer, 0.4.5)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AM_PROG_LIBTOOL
PKG_CHECK_MODULES(GLIB, [glib-2.0 gthread-2.0 gdk-pixbuf-2.0])
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GCONF, [gconf-2.0],[AM_GCONF_SOURCE_2],[])
AC_CHECK_FUNCS([strstr])


AC_OUTPUT([
Makefile
nailer.schemas
video-thumbnailer.desktop
nailer.spec
src/Makefile

])
